--- a/src/backends/starpu/blrm/CMakeLists.txt
+++ b/src/backends/starpu/blrm/CMakeLists.txt
@@ -3,5 +3,5 @@ set(SRC
     "${CMAKE_CURRENT_SOURCE_DIR}/dqp3.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/drsdd.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/dsdd.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/dmml.c"
+    #"${CMAKE_CURRENT_SOURCE_DIR}/dmml.c"
     ${SRC} PARENT_SCOPE)
