--- a/docs/config.in
+++ b/docs/config.in
@@ -756,7 +756,7 @@ WARN_IF_DOC_ERROR      = YES
 # parameter documentation, but not about the absence of documentation.
 # The default value is: NO.
 
-WARN_NO_PARAMDOC       = NO
+WARN_NO_PARAMDOC       = YES
 
 # If the WARN_AS_ERROR tag is set to YES then doxygen will immediately stop when
 # a warning is encountered.
@@ -795,7 +795,10 @@ INPUT                  = "@CMAKE_CURRENT_SOURCE_DIR@/index.md" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/examples.md" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/workflow.md" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/apps.md" \
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../include"\
                          "@CMAKE_CURRENT_BINARY_DIR@/../src/applications/spatial" \
+                         "@CMAKE_CURRENT_BINARY_DIR@/../src/applications/electrodynamics" \
+                         "@CMAKE_CURRENT_BINARY_DIR@/../src/applications/electrostatics" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/../src/applications" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential"\
                          "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential/blrm"\
@@ -806,9 +809,11 @@ INPUT                  = "@CMAKE_CURRENT_SOURCE_DIR@/index.md" \
                          "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/mpi/blrm"\
                          "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/starpu"\
                          "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/starpu/blrm"\
-                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/starpu/kernels"\
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/starpu/dense"\
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/mpi_starpu"\
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/mpi_starpu/blrm"\
                          "@CMAKE_CURRENT_SOURCE_DIR@/../src/control"\
-                         "@CMAKE_CURRENT_SOURCE_DIR@/../include"
+                         "@CMAKE_CURRENT_SOURCE_DIR@/../src/itersolvers"\
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
