Set EXTRACT_ALL=OFF for proper editing Doxygen documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules")
 include(EcrcInit)
 include(GenPkgConfig)
 include(FindPkgConfig)
-find_package(PkgConfig QUIET)
+find_package(PkgConfig REQUIRED)
 
 # Set path to header files of STARS-H
 include_directories("${CMAKE_SOURCE_DIR}/include")
@@ -129,11 +129,11 @@ if(MPI)
     if(MPI_C_LIBRARIES)
         # Go through the list of mpi libs and add them to
         # EXTRAPKGLIBS, in the form of "-lnameoflibrary"
-        message( STATUS "Found MPI_C_LIBRARIES: ${MPI_C_LIBRARIES}")
-        foreach( _mpilib ${MPI_C_LIBRARIES} )
-            get_filename_component( _extralib ${_mpilib} NAME_WE )
-            string( REGEX REPLACE "^lib" " -l" _extralib ${_extralib} )
-            list( APPEND EXTRAPKGLIBS ${_extralib} )
+        message(STATUS "Found MPI_C_LIBRARIES: ${MPI_C_LIBRARIES}")
+        foreach(_mpilib ${MPI_C_LIBRARIES} )
+            get_filename_component( _extralib ${_mpilib} NAME_WE)
+            string(REGEX REPLACE "^lib" " -l" _extralib ${_extralib})
+            list(APPEND EXTRAPKGLIBS ${_extralib})
         endforeach()
     endif()
 endif()
