--- a/docs/config.in
+++ b/docs/config.in
@@ -774,25 +774,25 @@ WARN_LOGFILE           =
 # Note: If this tag is empty the current directory is searched.
 
 INPUT   = "@CMAKE_CURRENT_SOURCE_DIR@/"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../include"\
-     "@CMAKE_CURRENT_BINARY_DIR@/../src/applications/spatial" \
-     "@CMAKE_CURRENT_BINARY_DIR@/../src/applications/electrodynamics" \
-     "@CMAKE_CURRENT_BINARY_DIR@/../src/applications/electrostatics" \
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/applications" \
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential/blrm"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential/dense"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/openmp"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/openmp/blrm"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/mpi"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/mpi/blrm"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/starpu"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/starpu/blrm"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/starpu/dense"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/mpi_starpu"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/mpi_starpu/blrm"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/control"\
-     "@CMAKE_CURRENT_SOURCE_DIR@/../src/itersolvers"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../include"\
+    "@CMAKE_CURRENT_BINARY_DIR@/../src/applications/spatial" \
+    "@CMAKE_CURRENT_BINARY_DIR@/../src/applications/electrodynamics" \
+    "@CMAKE_CURRENT_BINARY_DIR@/../src/applications/electrostatics" \
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/applications" \
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential/blrm"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/sequential/dense"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/openmp"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/openmp/blrm"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/mpi"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/mpi/blrm"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/starpu"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/starpu/blrm"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/starpu/dense"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/mpi_starpu"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/backends/mpi_starpu/blrm"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/control"\
+    "@CMAKE_CURRENT_SOURCE_DIR@/../src/itersolvers"\
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -2058,7 +2058,7 @@ INCLUDE_FILE_PATTERNS  =
 # recursively expanded use the := operator instead of the = operator.
 # This tag requires that the tag ENABLE_PREPROCESSING is set to YES.
 
-PREDEFINED             =
+PREDEFINED             = @STARSH_DEFINITIONS_LIST@
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then this
 # tag can be used to specify a list of macro names that should be expanded. The
