Rework DOCS and copyright in CMake files, separate headers

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,3 +1,6 @@
+# Make DOXYGEN_INPUT appropriate for config file
+string(REPLACE ";" "\"\\\n    \"" DOXYGEN_INPUT "${DOXYGEN_INPUT}")
+
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/config.in"
     "${CMAKE_CURRENT_BINARY_DIR}/config")
 add_custom_target(docs COMMAND
