Finished with DOCS=OFF SHORT FULL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,12 +123,16 @@ include_directories("${CMAKE_SOURCE_DIR}/include")
 ##                     CHECK IF OPTIONS ARE SUPPORTED                        ##
 ###############################################################################
 
+# Gather Doxygen enabled sections for SHORT documentation
+set(DOXYGEN_ENABLED_SECTIONS)
+
 # Check if OpenMP is supported and expand compilation flags
 # Addition of OpenMP flags will be local in future versions
 if(OPENMP)
     find_package(OpenMP)
     if(OPENMP_FOUND)
         add_definitions("-DOPENMP")
+        list(APPEND DOXYGEN_ENABLED_SECTIONS OPENMP)
     else()
         set(OPENMP OFF)
     endif()
@@ -140,6 +144,7 @@ if(MPI)
     if(MPI_C_FOUND)
         include_directories(${MPI_C_INCLUDE_PATH})
         add_definitions("-DMPI")
+        list(APPEND DOXYGEN_ENABLED_SECTIONS MPI)
     else()
         set(MPI OFF)
     endif()
@@ -162,6 +167,7 @@ if(STARPU)
         include_directories(${STARPU_INCLUDE_DIRS})
         link_directories(${STARPU_LIBRARY_DIRS})
         add_definitions("-DSTARPU")
+        list(APPEND DOXYGEN_ENABLED_SECTIONS STARPU)
     else()
         set(STARPU OFF)
     endif()
@@ -174,6 +180,7 @@ if(GSL)
     if(GSL_FOUND)
         include_directories(${GSL_INCLUDE_DIRS})
         add_definitions("-DGSL")
+        list(APPEND DOXYGEN_ENABLED_SECTIONS GSL)
     else()
         set(GSL OFF)
     endif()
