--- a/src/applications/spatial/CMakeLists.txt
+++ b/src/applications/spatial/CMakeLists.txt
@@ -21,7 +21,7 @@ EXECUTE_PROCESS(COMMAND "python"
     OUTPUT_VARIABLE generated_files2)
 list(APPEND generated_files ${generated_files2})
 
-if(GSL_FOUND)
+if(GSL_FOUND OR DOCS STREQUAL "FULL")
     EXECUTE_PROCESS(COMMAND "python"
         "../misc_scripts/code_generation/applications/particles/kernel_nd.py"
         "${CMAKE_CURRENT_SOURCE_DIR}/kernel_matern.c"
