--- a/starsh.pc.in
+++ b/starsh.pc.in
@@ -1,7 +1,7 @@
 Name: STARSH
 Description: Software for Testing Accuracy, Reliability and Scalability of Hierarchical computations
 Version: @STARS-H_VERSION@
-URL: http://github.com/ecrc/stars-h-dev
+URL: https://github.com/ecrc/stars-h
 Cflags: -I@INCDIR@
 Libs: -L@LIBDIR@ @STARSH_PKGCONFIG_LIBS@
 Libs.private: @STARSH_PKGCONFIG_LIBS_PRIVATE@
