pkg-config will have a prefix variable, easy to change
This is helpful for users that do not use the same tree build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -322,8 +322,9 @@ include(PrintOpts)
 
 # Set parameters for PKGCONFIG
 set(PREFIX "${CMAKE_INSTALL_PREFIX}")
-set(LIBDIR "${CMAKE_INSTALL_PREFIX}/lib")
-set(INCDIR "${CMAKE_INSTALL_PREFIX}/include")
+set(LIBDIR "lib")
+set(INCDIR "include")
+
 
 #Install Pkg-config file
 generate_pkgconfig_file()
