--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@
 # @version 0.1.0
 # @author Eduardo Gonzalez Fisher
 # @author Aleksandr Mikhalev
-# @date 2017-11-07
+# @date 2018-11-06
 
 
 ###############################################################################
@@ -322,8 +322,9 @@ include(PrintOpts)
 
 # Set parameters for PKGCONFIG
 set(PREFIX "${CMAKE_INSTALL_PREFIX}")
-set(LIBDIR "${CMAKE_INSTALL_PREFIX}/lib")
-set(INCDIR "${CMAKE_INSTALL_PREFIX}/include")
+set(LIBDIR "lib")
+set(INCDIR "include")
+
 
 #Install Pkg-config file
 generate_pkgconfig_file()
