--- a/src/applications/CMakeLists.txt
+++ b/src/applications/CMakeLists.txt
@@ -25,5 +25,8 @@ set(STARSH_SRC
     "${CMAKE_CURRENT_SOURCE_DIR}/minimal.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/particles.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/cauchy.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh_deformation/cube.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh_deformation/mesh_rbf.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh_deformation/virus.c"
     ${STARSH_SRC})
 set(STARSH_SRC ${STARSH_SRC} PARENT_SCOPE)
