--- a/src/applications/CMakeLists.txt
+++ b/src/applications/CMakeLists.txt
@@ -28,5 +28,6 @@ set(STARSH_SRC
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh_deformation/cube.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh_deformation/mesh_rbf.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh_deformation/virus.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/mesh_deformation/kernels_rbf.c"
     ${STARSH_SRC})
 set(STARSH_SRC ${STARSH_SRC} PARENT_SCOPE)
