--- a/src/applications/CMakeLists.txt
+++ b/src/applications/CMakeLists.txt
@@ -29,5 +29,16 @@ set(STARSH_SRC
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh_deformation/mesh_rbf.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh_deformation/virus.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/mesh_deformation/kernels_rbf.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/acoustic/acoustic-kernel/curve_para.f90"
+    "${CMAKE_CURRENT_SOURCE_DIR}/acoustic/acoustic-kernel/frequency.f90"
+    "${CMAKE_CURRENT_SOURCE_DIR}/acoustic/acoustic-kernel/gaussintegraldata.f90"
+    "${CMAKE_CURRENT_SOURCE_DIR}/acoustic/acoustic-kernel/global_com.f90"
+    "${CMAKE_CURRENT_SOURCE_DIR}/acoustic/acoustic-kernel/global_dim.f90"
+    "${CMAKE_CURRENT_SOURCE_DIR}/acoustic/acoustic-kernel/global_geom.f90"
+    "${CMAKE_CURRENT_SOURCE_DIR}/acoustic/acoustic-kernel/hard_nys.f90"
+    "${CMAKE_CURRENT_SOURCE_DIR}/acoustic/acoustic-kernel/inci_rhs.f90"
+    "${CMAKE_CURRENT_SOURCE_DIR}/acoustic/acoustic-kernel/near_scafield.f90"
+    "${CMAKE_CURRENT_SOURCE_DIR}/acoustic/mesh_acoustic.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/acoustic/acoustic.c"
     ${STARSH_SRC})
 set(STARSH_SRC ${STARSH_SRC} PARENT_SCOPE)
