add cube example

--- a/examples/problem/CMakeLists.txt
+++ b/examples/problem/CMakeLists.txt
@@ -17,7 +17,8 @@ set(examples_files
     "minimal.c"
     "dense.c"
     "particles.c"
-    "rbf.c"
+    "rbf_virus.c"
+    "rbf_cube.c"
     "acoustic.c"
     )
 
