--- a/src/applications/electrostatics/CMakeLists.txt
+++ b/src/applications/electrostatics/CMakeLists.txt
@@ -10,7 +10,7 @@
 # @date 2017-11-07
 
 EXECUTE_PROCESS(COMMAND "python"
-    "../misc_scripts/code_generation/applications/particles/kernel_nd.py"
+    "${CMAKE_CURRENT_SOURCE_DIR}/../../../misc_scripts/code_generation/applications/particles/kernel_nd.py"
     "${CMAKE_CURRENT_SOURCE_DIR}/kernel_coulomb_potential.c"
     "${CMAKE_CURRENT_BINARY_DIR}" OUTPUT_VARIABLE generated_files)
 
